syntax = "proto3";
package sequence;

service Sequence {
  rpc GetOrderID (GetOrderIDReq) returns (GetOrderIDRsp) {}
  rpc GetSnowflakeID(GetSnowflakeIDReq) returns (GetSnowflakeIDRsp){}
  rpc GetDisorderID(GetDisorderIDReq)returns (GetDisorderIDRsp){}

  rpc GetSegmentID(GetSegmentIDReq) returns(GetSegmentIDRsp){}
}

//该模式用于签发有序增长ID，拼接产品线和业务ID 好能够在看到ID的时候区分其性质, 用于系统内部使用
//time + pid + bid + seq
message GetOrderIDReq {
    int32 pid  = 1; //产品线ID
    int32 bid  = 2; //业务ID
}

message GetOrderIDRsp {
    string id = 1;
}

//获得雪花ID
message GetSnowflakeIDReq{}

message GetSnowflakeIDRsp{
    int64   id = 1;
}


//无序订单号,这类ID 用于在对外系统使用,例如淘宝的支付订单号
//time + pid + bid + snowID
message GetDisorderIDReq{
    int32 pid = 1;
    int32 bid = 2;
}

message GetDisorderIDRsp{
    string id = 1;
}


message GetSegmentIDReq{
    int32 pid = 1;
    int32 bid = 2;
}

message GetSegmentIDRsp{
   int64 id = 1;
}
